# cornrow

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  cornrow.pri  cornrow.pro
ble/: CMakeLists.txt  ble.pro
ble/include/ble/: Adapter.h  BleClient.h  Central.h  Client.h  Controller.h  Converter.h  Peripheral.h  PeripheralAdapter.h  Server.h  ServerAdapter.h
ble/src/: Adapter.cpp  BleClient.cpp  Central.cpp  Client.cpp  ClientSession.cpp  ClientSession.h  Controller.cpp  Converter.cpp  Converter.h  Defines.h  Peripheral.cpp  PeripheralAdapter.cpp  Server.cpp  ServerAdapter.cpp  ServerSession.cpp  ServerSession.h
ble/tests/: CMakeLists.txt  centraltest.cpp  peripheraltest.cpp
bluebricated/: CMakeLists.txt
bluebricated/src/: Controller.cpp  Controller.h  main.cpp
bluebricated/src/audio/: Buffer.cpp  Buffer.h  Controller.cpp  Controller.h  FileDescriptorSource.cpp  Pipeline.cpp  Pipeline.h
bluebricated/src/bluetooth/: Controller.cpp  Controller.h
common/: CMakeLists.txt  IControllable.h  Types.cpp  Types.h  Util.cpp  Util.h  common.pro
common/include/common/: IAudioConf.h  IControllable.h  RemoteData.h  RemoteDataStore.h  Types.h  Util.h
common/include/common/ble/: Converter.h  Types.h
common/src/: RemoteData.cpp  RemoteDataStore.cpp  Types.cpp  Util.cpp
common/src/ble/: Converter.cpp
cornrowd/: CMakeLists.txt  Controller.cpp  Controller.h  CornrowdOptionGroup.h  cornrowd.pro  main.cpp
cornrowd/etc/: cornrowd.conf
cornrowd/input/hifiberrydigi/: RateFileWatcher.cpp  RateFileWatcher.h
cornrowd/src/: Config.cpp  Config.h  Controller.cpp  Controller.h  CornrowdOptionGroup.cpp  daemon.c  daemon.h  main.cpp
cornrowd/src/audio/: AudioManager.cpp  AudioManager.h  CMakeLists.txt  Controller.cpp  Controller.h  Converter.cpp  Converter.h  CoroPipeline.cpp  CoroPipeline.h  FileDescriptorSource.cpp  FileDescriptorSource.h  Pipeline.cpp  Pipeline.h
cornrowd/src/ble/: CMakeLists.txt  Controller.cpp  Controller.h
cornrowd/src/bluetooth/: AudioSinkAgent.cpp  AudioSinkAgent.h  CMakeLists.txt  Controller.cpp  Controller.h
cornrowd/src/config/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  Controller.cpp  Controller.h  Persistence.cpp  Persistence.h
cornrowd/tests/: CMakeLists.txt  bletest.cpp  fdtest.cpp  qtperipheraltest.cpp
coroco/: MainWindow.cpp  MainWindow.h  MainWindow.ui  Model.cpp  Model.h  TableSpinBox.cpp  TableSpinBox.h  Types.cpp  Types.h  ZeroconfBonjour.cpp  ZeroconfBonjour.h  ZeroconfWrapper.cpp  ZeroconfWrapper.h  coroco.pro
corocomo/: CMakeLists.txt  EqChart.cpp  EqChart.h  corocomo.pro  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
corocomo/android/: AndroidManifest.xml
corocomo/ios/: Info.plist
corocomo/src/: BleCentralAdapter.cpp  BleCentralAdapter.h  BodePlotModel.cpp  BodePlotModel.h  BusyIndicatorModel.cpp  BusyIndicatorModel.h  Chip.qml  ChipGroup.qml  Config.cpp  Config.h  CornrowBusyIndicator.qml  CoroBusyIndicator.qml  DeviceDialog.qml  DeviceModel.cpp  DeviceModel.h  EqChart.cpp  EqChart.h  EqGraph.cpp  EqGraph.h  FilterBandButton.qml  FilterModel.cpp  FilterModel.h  FilterParameter.qml  Io.qml  IoModel.cpp  IoModel.h  ListItemNew.qml  Model.cpp  Model.h  ModelConfiguration.cpp  ModelConfiguration.h  PhaseChart.cpp  PhaseChart.h  Plot.cpp  Plot.h  PresetModel.cpp  PresetModel.h  Presets.qml  RemoteAccessManager.cpp  RemoteAccessManager.h  (+7 more)
corocomo/src/net/: Client.cpp  Client.h
debian/: README  changelog  control  copyright  cornrowd-rpi.install  cornrowd-rpi.postinst  cornrowd-rpi.postrm  cornrowd.install  cornrowd.postinst  cornrowd.postrm  cornrowd.service  postinst.ex  postrm.ex  rules
debian/source/: options
gstreamermm-dsp/: GstDspBiquad.cpp  GstDspBiquad.h  GstDspCrossover.cpp  GstDspCrossover.h  GstDspLoudness.cpp  GstDspLoudness.h  GstDspPeq.cpp  GstDspPeq.h  GstDspPlugin.cpp  GstDspPlugin.h  GstDspWrapper.cpp  GstDspWrapper.h  gstreamermm-dsp.pro
legacy/coroco/: MainWindow.cpp  MainWindow.h  TableSpinBox.h  Types.h  ZeroconfBonjour.h  coroco.pro
legacy/protocol/v1/: ClientAdapter.cpp  Converter.h  ServerAdapter.h
legacy/protocol/v2/: ClientAdapter.cpp  ClientAdapter.h  ServerAdapter.h
legacy/zeroconf/: ZeroconfWrapper.cpp
net/: CMakeLists.txt  net.pro
net/include/QZeroProps/: BleCentralAdapter.h  QZeroPropsBluetoothLeService.h  QZeroPropsClient.h  QZeroPropsService.h  QZeroPropsTypes.h
net/include/QtZeroProps/: QZeroPropsClient.h  QZeroPropsServer.h  QZeroPropsService.h  QZeroPropsTypes.h
net/include/net/: NetClient.h  NetService.h  TcpClient.h  TcpServer.h
net/src/: BleCentralAdapter.cpp  BleClient.cpp  BleClientSession.cpp  BleClientSession.h  BleServer.cpp  BleServer.h  BleServerSession.cpp  BleServerSession.h  NetClient.cpp  NetService.cpp  QZeroPropsBleClient.cpp  QZeroPropsBleClient.h  QZeroPropsBleService.h  QZeroPropsClient.cpp  QZeroPropsServer.cpp  QZeroPropsServerPrivate.cpp  QZeroPropsServerPrivate.h  QZeroPropsService.cpp  QZeroPropsServicePrivate.cpp  QZeroPropsServicePrivate.h  QZeroPropsWebSocketService.cpp  QZeroPropsWebSocketService.h  QZeroPropsWsServer.cpp  QZeroPropsWsServer.h  QZeroPropsWsService.cpp  QZeroPropsWsService.h  TcpClient.cpp  TcpServer.cpp
net/tests/: centraltest.cpp
protocol/: ProtocolAdaptersV1.cpp  ProtocolAdaptersV1.h  ProtocolTypesV1.cpp  ProtocolTypesV1.h  protocol.pro
protocol/v1/: ClientAdapter.cpp  ClientAdapter.h  Converter.cpp  Converter.h  ServerAdapter.cpp  ServerAdapter.h  Types.h
protocol/v2/: Converter.cpp  Converter.h  ServerAdapter.cpp  ServerAdapter.h  Types.h
zeroconf/: ZeroconfWrapper.cpp  ZeroconfWrapper.h  zeroconf.pro
